[gd_scene load_steps=4 format=3 uid="uid://d8nv6ww61vv7"]

[ext_resource type="Script" path="res://scenes/gun.gd" id="1_nvs67"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://graphics/pistol/pistol.png" id="1_on1b0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_08w86"]
radius = 672.0

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_nvs67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_08w86")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(72, -13)
texture = ExtResource("1_on1b0")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
position = Vector2(25, -11)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
